test/typeerrors/ex10.golden
Building file ../test/typeerrors/ex10.act
  Compiling ex10.act for release

ERROR: Error when compiling ex10 module: Type error

  |
4 |    except int:
  |    ^^^^^^^^^^
__builtin__.int is not a subclass of __builtin__.Exception

- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - 

